<resources>
    <string name="about">About</string>
    <string name="add_images">Add images</string>
    <string name="add_item">Add Item</string>
    <string name="add_label">Add label</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="adding_files">Adding files</string>
    <string name="adding_images">Adding images</string>
    <string name="all">All</string>
    <string name="app_name" translatable="false">NotallyXO</string>
    <string name="appearance">Appearance</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
    <plurals name="archived_selected_notes">
        <item quantity="one">Archived %1$d note</item>
        <item quantity="other">Archived %1$d notes</item>
    </plurals>
    <string name="ascending">Ascending</string>
    <string name="attach_file">Attach file</string>
    <string name="audio_recordings">Audio Recordings</string>
    <string name="auto_backup">Auto Backups</string>
    <string name="auto_backup_error_message">An error occurred during auto backup:\n\'%1$s\'\nPlease check your settings or report a bug</string>
    <string name="auto_backup_failed">NotallyXO Auto Backup failed</string>
    <string name="auto_backup_last">Last Backup</string>
    <string name="auto_backup_on_save">Backup on exit Note automatically</string>
    <string name="auto_backup_on_save_hint">By enabling this, a backup (\"NotallyXO_AutoBackup.zip\") is automatically created in the configured \"Backups Folder\" whenever a note is exited.\nBe aware this might affect performance</string>
    <string name="auto_backups_folder">Backups Folder</string>
    <string name="auto_backups_folder_hint">Folder in which all auto backups will be stored in.</string>
    <string name="auto_backups_folder_rechoose">You need to re-choose your Backups Folder so that NotallyXO has permission to write to it.\nYou can also press cancel to skip importing Backups Folder value</string>
    <string name="auto_backups_folder_set">Set up a Backups Folder above first</string>
    <string name="auto_save_after_idle_time">Auto save note after specified idle time</string>
    <string name="auto_sort_by_checked">Sort checked items to the end</string>
    <string name="back">Back</string>
    <string name="backup">Backup</string>
    <string name="backup_password">Backup Password</string>
    <string name="backup_password_hint">By setting this, all future backup ZIPs will be encrypted and password-protected</string>
    <string name="backup_period_days">Auto backup period in days</string>
    <string name="backup_periodic">Periodic Backups</string>
    <string name="backup_periodic_hint">By enabling this, backups are automatically created in the configured Backups Folder.\nThis may not work if you have power saving mode enabled</string>
    <string name="behaviour">Behaviour</string>
    <string name="biometric_lock">Lock app with device biometric or PIN</string>
    <string name="biometrics_disable_success">Biometric/PIN lock has been disabled</string>
    <string name="biometrics_failure">Failed to authenticate via Biometric/PIN</string>
    <string name="biometrics_no_support">No biometric features available on this device</string>
    <string name="biometrics_not_setup">Biometrics/PIN are not setup for your device yet</string>
    <string name="biometrics_setup_success">Biometric/PIN lock has been enabled</string>
    <string name="bold">Bold</string>
    <string name="calculating">Calculating…</string>
    <string name="cancel">Cancel</string>
    <plurals name="cant_add_files">
        <item quantity="one">Can’t add %1$d file</item>
        <item quantity="other">Can’t add %1$d files</item>
    </plurals>
    <plurals name="cant_add_images">
        <item quantity="one">Can’t add %1$d image</item>
        <item quantity="other">Can’t add %1$d images</item>
    </plurals>
    <string name="cant_find_folder">Can’t find folder. It may have been moved or deleted</string>
    <string name="cant_find_note">Can’t find note. It may have been deleted</string>
    <string name="cant_load_file">Can’t load file. It may have been moved or deleted</string>
    <string name="cant_load_image">Can’t load image. It may have been moved or deleted</string>
    <string name="cant_open_link">Can’t open link</string>
    <string name="change_color">Change Color</string>
    <string name="change_color_message">Pick a color or create a new one.\nYou can also edit a Color by long pressing it.</string>
    <string name="change_note">Change Note</string>
    <string name="check_all_items">Check all items</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="choose_folder">Choose folder</string>
    <string name="choose_other_app">Choose which app to import from</string>
    <string name="clear">Clear</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_data_message">All Notes, Images, Files, Audios will be permanently deleted</string>
    <string name="clear_formatting">Clear formatting</string>
    <string name="cleared_data">All Data has been cleared</string>
    <string name="color">Color</string>
    <string name="color_exists">This color already exists!</string>
    <string name="content_density">Content density</string>
    <string name="continue_">Continue</string>
    <string name="convert_to_list_note">Convert to List</string>
    <string name="convert_to_text_note">Convert to Text Note</string>
    <string name="copied_link">Copied Link to Clipboard</string>
    <string name="copy">Copy</string>
    <string name="count" translatable="false">%1$d / %2$d</string>
    <string name="crash_message">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="create_github_issue">Create Github Issue</string>
    <string name="creation_date">Created</string>
    <string name="custom">Custom</string>
    <string name="daily">Daily</string>
    <string name="dark">Dark</string>
    <string name="data_in_public">Store data in public folder</string>
    <string name="data_in_public_message">By enabling this, the app’s internal database will be moved into the app’s public folder (Android/media/com.sleepyyui.notallyxo).\nIn combination with file synchronization apps this can be used to synchronize NotallyXO data between multiple devices.</string>
    <string name="date">Date</string>
    <string name="date_format">Date format</string>
    <string name="date_format_apply_in_note_view">Also apply in Note View</string>
    <string name="date_format_hint">Applies selected date format in Notes Overview</string>
    <string name="days">Days</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_notes">Delete all notes\?</string>
    <string name="delete_audio_recording_forever">Delete audio recording forever\?</string>
    <string name="delete_checked_items">Delete checked items</string>
    <string name="delete_color_message">What color should the notes have that currently use this color\?</string>
    <string name="delete_file">Delete file \'%1$s\'\?</string>
    <string name="delete_forever">Delete forever</string>
    <string name="delete_image_forever">Delete image forever\?</string>
    <string name="delete_label">Delete label\?</string>
    <string name="delete_note_forever">Delete note forever\?</string>
    <string name="delete_reminder">Delete reminder\?</string>
    <string name="delete_selected_notes">Delete selected notes\?</string>
    <string name="deleted">Deleted</string>
    <plurals name="deleted_selected_notes">
        <item quantity="one">Deleted %1$d note</item>
        <item quantity="other">Deleted %1$d notes</item>
    </plurals>
    <string name="deleting_files">Deleting files</string>
    <string name="deleting_images">Deleting images</string>
    <string name="descending">Descending</string>
    <string name="disable">Disable</string>
    <string name="disable_data_in_public">Move data back to internal folder</string>
    <string name="disable_lock_description">This will also decrypt the database</string>
    <string name="disable_lock_title">Disable lock via Biometric/PIN</string>
    <string name="disabled">Disabled</string>
    <string name="disallow_screenshots">Disallow Screenshots</string>
    <string name="discard">Discard</string>
    <string name="display_text">Text to display</string>
    <string name="donate">Make a Donation</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="edit">Edit</string>
    <string name="edit_color">Edit Color</string>
    <string name="edit_label">Edit label</string>
    <string name="edit_link">Edit Link</string>
    <string name="edit_reminders">Edit Reminders</string>
    <string name="elapsed">Elapsed</string>
    <string name="empty_labels">No labels yet. Create one\?</string>
    <string name="empty_list">Empty list</string>
    <string name="empty_note">Empty note</string>
    <string name="empty_reminders">No reminders yet. Create one\?</string>
    <string name="enable_lock_description">This will also encrypt the database</string>
    <string name="enable_lock_title">Enable lock via Biometric/PIN</string>
    <string name="enabled">Enabled</string>
    <string name="error_while_renaming_file">Error while renaming file</string>
    <string name="error_while_renaming_image">Error while renaming image</string>
    <string name="evernote">Evernote</string>
    <string name="evernote_help">In order to import your Notes from Evernote you must export your Evernote Notebook as ENEX. Click Help to get more information.\n\nIf you already have a ENEX file, click Import and choose it.</string>
    <string name="every">Every</string>
    <string name="export">Export</string>
    <string name="export_backup">Export backup</string>
    <string name="export_settings">Export Settings</string>
    <string name="export_settings_failure">Failed to export settings, did you choose an invalid path\?</string>
    <string name="export_settings_message">All Settings will be exported to a JSON file, which can be used to re-import stored settings.\n\nBe aware, that this does not include encrypted settings like the auto-backup password or the biometric encryption key</string>
    <string name="export_settings_success">Successfully exported settings</string>
    <string name="exporting_backup">Exporting backup</string>
    <string name="extracted_files">Files extracted</string>
    <string name="filter">Filter</string>
    <string name="folder">Folder</string>
    <string name="follow_system">Follow system</string>
    <string name="google_keep">Google Keep</string>
    <string name="google_keep_help">In order to import your Notes from Google Keep you must download your Google Takeout ZIP file. Only select the \"Keep\" data. Click Help to get more information.\n\nIf you already have a Takeout ZIP file, click Import and choose the ZIP file.</string>
    <string name="grid">Grid</string>
    <string name="help">Help</string>
    <string name="cloud_sync_options_message">Configure auto-sync and connectivity preferences</string>
    <string name="cloud_server_url">Server URL</string>
    <string name="cloud_server_port">Port</string>
    <string name="cloud_auth_token">Authentication Token</string>
    <string name="cloud_auto_sync">Auto Sync</string>
    <string name="cloud_wifi_only">Sync on Wi-Fi Only</string>
    <string name="cloud_sync_conflict_message">This note has been modified both locally and on the server. Please choose which version to keep or manually merge the changes.</string>
    <string name="conflict_local_version">Local Version</string>
    <string name="conflict_server_version">Server Version</string>
    <string name="conflict_keep_local">Keep Local</string>
    <string name="conflict_keep_server">Keep Server</string>
    <string name="conflict_merge">Merge Changes</string>
</resources>